--- a/.github/workflows/xunit-tests.yml
+++ b/.github/workflows/xunit-tests.yml
@@ -32,4 +32,4 @@ jobs:
             uses: actions/upload-artifact@v4
             with:
               name: test-results
-              path: XUnitTestProject/TestResults/test-results.trx
+              path: test-report
