--- a/.github/workflows/xunit-tests.yml
+++ b/.github/workflows/xunit-tests.yml
@@ -26,10 +26,15 @@ jobs:
               
           - name: Run unit tests with report
             run: dotnet test ./XUnitTestProject/XUnitTestProject.csproj --configuration Release --no-build --logger "trx;LogFileName=test-results.trx"
-            
+
+          - name: Generate Test Report
+            run: |
+                dotnet tool install -g dotnet-reportgenerator-globaltool
+                reportgenerator -reports:XUnitTestProject/TestResults/test-results.trx -targetdir:report -reporttypes:Html
+                
           - name: Upload test results
             if: always()
             uses: actions/upload-artifact@v4
             with:
               name: test-results
-              path: report.txt
+              path: report
