--- a/.github/workflows/xunit-tests.yml
+++ b/.github/workflows/xunit-tests.yml
@@ -23,18 +23,12 @@ jobs:
             
           - name: Build the solution
             run: dotnet build ./RussianRouletteBut.sln --configuration Release --no-restore
-              
+             
           - name: Run unit tests with report
             run: dotnet test ./XUnitTestProject/XUnitTestProject.csproj --configuration Release --no-build --logger "trx;LogFileName=test-results.trx"
-
-          - name: Generate Test Report
-            run: |
-                dotnet tool install -g dotnet-reportgenerator-globaltool
-                reportgenerator -reports:XUnitTestProject/TestResults/test-results.trx -targetdir:report -reporttypes:Html
-                
+            
           - name: Upload test results
-            if: always()
             uses: actions/upload-artifact@v4
             with:
               name: test-results
-              path: report
+              path: XUnitTestProject/TestResults/test-results.trx
